@@ -1,3 +1,8 @@
+2012-06-22  Niibe Yutaka  <gniibe@fsij.org>
+
+	* tool/stlinkv2.py (stlinkv2.blank_check): Add blank check of
+	Flash ROM.
+
 2012-06-21  Niibe Yutaka  <gniibe@fsij.org>
 
 	* tool/asm-thumb/blank_check.S: New.
